welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:10: error: not found: value poseBrosse
{setCouleurBrosse(c);poseBrosse();leveBrosse()	
                     ^