welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growflowers(cl:Color) {
marquage(cl); droite(); avance(); gauche();avance(); marquage(cl); avance()
gauche();avance(); marquage(cl); avance(); gauche();avance();marquage(cl);
gauche();avance();marquage(Color.yellow);gauche();recule();	
	
}

def marquage(c:Color)
{setCouleurBrosse(c);poseBrosse();leveBrosse()	
}
growflowers(Color.red)